--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="%BASE_URL%vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%BASE_URL%adenium-mark-256.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%BASE_URL%adenium-mark-64.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Adenium Labs</title>
   </head>
   <body>
     <div id="root"></div>
